# flutter_application_final_emotiv_logger

./: .cursorignore  .fvmrc  .gitignore  .metadata  AGENTS.md  README.md  flutter_application_final_emotiv_logger.code-workspace  pubspec.yaml  pyproject.toml
.cursor/plans/: auto-set_save_directory_on_launch_4e74255b.plan.md  enable_lsl_for_android_dcd50cbf.plan.md  fix_android_apk_build_liblsl_ada05f17.plan.md  fix_lsl_outlet_hostname_on_ios_f488ddc5.plan.md  re-enable_lsl_flutter_via_outletmanager_664f0d30.plan.md  reimplement_lsl_outlets_with_liblsl_f39ab4b4.plan.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: connection_bar.dart  crypto_utils.dart  eeg_file_writer.dart  emotiv_ble_manager.dart  emotiv_usb_manager.dart  file_storage.dart  generic_file_writer.dart  live_plots_tab.dart  live_table_tab.dart  main.dart  main_usb.dart  motion_file_writer.dart
lib/services/: network_streamer.dart
lib/settings/: app_settings.dart
lib/testing/: liblsl_example.dart
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
openspec/: project.md
openspec/changes/add-live-plots-tab/: design.md  proposal.md  tasks.md
openspec/changes/add-live-plots-tab/specs/ui-live-plots/: spec.md
openspec/changes/add-ui-modular-shell/: design.md  proposal.md  tasks.md
openspec/specs/ble-streaming/: README.md  bluetooth-protocol.md  requirements.md  spec.md
test/: app_settings_test.dart
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
(+1 files in other folders)
