[project]
name = "flutter-application-final-emotiv-logger"
version = "0.1.0"
requires-python = ">=3.13.12"
dependencies = [
    "phopylslhelper",
    "phopymnehelper",
    "pylsl>=1.18.1",
    "setuptools>=82.0.1",
    "wheel>=0.46.3",
]

[tool.uv.sources]
phopylslhelper = { git = "https://github.com/CommanderPho/phopylslhelper.git" }
phopymnehelper = { git = "https://github.com/CommanderPho/PhoPyMNEHelper.git" }
